# local-scryfall

./: .gitignore  README.md  pyproject.toml
mtg_viewer/: __init__.py  __main__.py  db.py  http_client.py  image_cache.py  main.py  models.py  theme.py  updater.py
mtg_viewer/query/: __init__.py  aliases.py  color_nicknames.py  compiler.py  executor.py  parser.py  tokenizer.py
mtg_viewer/widgets/: card_detail.py  card_image_grid.py  card_list.py  search_bar.py
